@@ -237,7 +237,7 @@ sub instance_install {
                 next;
             }
         }
-        $bcmd->info_cache(1) if ! $self->{args}{no_cache};
+        $bcmd->info_cache(1) if ! $self->{args}{nocache};
     }
     else {
         $log->_5("using existing versions only, nothing to install");
@@ -264,7 +264,7 @@ sub instance_remove {
         else {
             `$remove_cmd $version 2>/dev/null`;
         }
-        $bcmd->info_cache(1) if $self->{args}{no_cache};
+        $bcmd->info_cache(1) if ! $self->{args}{nocache};
     }
     else {
         $log->_0("removing previous installs...");
@@ -286,7 +286,7 @@ sub instance_remove {
             else {
                 `$remove_cmd $installed_perl 2>/dev/null`;
             }
-            $bcmd->info_cache(1) if $self->{args}{info_cache};
+            $bcmd->info_cache(1) if ! $self->{args}{nocache};
         }
     }
 
